# pgk-3d-engine

./: CMakeLists.txt  build-run-win.sh  build-run.sh
include/: OpenGL.hpp
include/Engine/: Camera.hpp  Colisions.hpp  FpsCamera.hpp  GameObject.hpp  GameObjectCluster.hpp  GameObjectRepository.hpp  Init.hpp  MeshRepository.hpp  Player.hpp  ShaderRepository.hpp  SimplePhysics.hpp  TpsCamera.hpp  VolumetricParticles.hpp  Window.hpp
include/Engine/Math/: Generator.hpp  Math.hpp  Transform.hpp
include/Engine/Misc/: Monoliths.hpp  Types.hpp
include/Game/: Init.hpp
include/Game/Scripts/: Scripts.hpp
include/ModelEditor/: Init.hpp
meshes/: diamond.3d  plane.3d
shaders/: asteroid.frag  asteroid.vert  base.frag  particle.frag  sky.frag
src/: main.cpp
src/Engine/: Camera.cpp  Colisions.cpp  FpsCamera.cpp  GameObject.cpp  GameObjectCluster.cpp  GameObjectRepository.cpp  Init.cpp  MeshRepository.cpp  Player.cpp  ShaderRepository.cpp  SimplePhysics.cpp  TpsCamera.cpp  VolumetricParticles.cpp  Window.cpp
src/Engine/Math/: Generator.cpp  Math.cpp  Transform.cpp
src/Game/: Init.cpp
src/Game/Scripts/: Scripts.cpp
src/ModelEditor/: Init.cpp
